Minor code warnings fix.